:hearts: refactor source

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "adb": "adb reverse tcp:8081 tcp:8081",
         "all": "watchman watch-del-all && rm -rf yarn.lock && rm -rf node_modules/ && rm -fr $TMPDIR/metro* && yarn install",
         "android": "react-native run-android",
-        "eslint": "eslint --quiet --ext js,jsx,ts,tsx src --fix",
-        "fix": "prettier --write \"{src,modules}/**/*.{ts,tsx}\"",
+        "eslint": "eslint --quiet --ext js,jsx,ts,tsx app --fix",
+        "fix": "prettier --write \"{app,src,modules}/**/*.{ts,tsx}\"",
         "git-clean": "git config --local filter.turnOfDebugging.clean 'sed \"s/= true/= false/\"'",
         "git-hide": "git update-index --skip-worktree packages/core/services/sender/getUrlForPath.ts",
         "git-pull-rebase": "git config --local pull.rebase true",
@@ -17,7 +17,7 @@
         "ios-14": "react-native run-ios --simulator=\"iPhone 14 \"",
         "ios-gems": "cd ios && bundle install",
         "kill": "kill $(lsof -ti:8081)",
-        "lint": "tsc && eslint --quiet --ext js,jsx,ts,tsx src && jest",
+        "lint": "tsc && eslint --quiet --ext js,jsx,ts,tsx app && jest",
         "sort": "npx sort-package-json",
         "start": "react-native start",
         "test": "jest",
@@ -40,6 +40,7 @@
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
         "@types/shallow-equals": "^1.0.0",
+        "axios": "^1.3.5",
         "deepmerge": "^4.3.1",
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.43",
