--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "axios": "^1.3.5",
         "deepmerge": "^4.3.1",
         "lodash": "^4.17.21",
+        "moment": "^2.24.0",
         "moment-timezone": "^0.5.43",
+        "nanoid": "^3.1.12",
         "react": "18.2.0",
         "react-intl": "^6.3.2",
         "react-native": "0.71.4",
