--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,6 +86,12 @@
       "@managers": [
         "app/managers"
       ],
+      "@models/*": [
+        "app/models/*"
+      ],
+      "@models": [
+        "app/models"
+      ],
       "@managers/*": [
         "app/managers/*"
       ],
