--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,24 +2,41 @@
 
 buildscript {
     ext {
-        RNNKotlinVersion = "1.4.31"
         buildToolsVersion = "33.0.0"
         minSdkVersion = 21
         compileSdkVersion = 33
         targetSdkVersion = 33
-        kotlin_version = '1.6.10'
+        kotlinVersion = "1.7.21"
+        RNNKotlinVersion = kotlinVersion
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
     repositories {
         google()
+        mavenLocal()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
         classpath("com.android.tools.build:gradle:7.3.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath("com.google.gms:google-services:4.3.15")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
+}
+
+allprojects {
+  repositories {
+    google()
+    mavenLocal()
+    mavenCentral()
+
+    maven {
+      // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+      url "$rootDir/../node_modules/react-native/android"
+    }
+
+    maven { url 'https://jitpack.io' }
+  }
 }
