--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "@babel/core": "^7.20.0",
         "@babel/eslint-parser": "^7.21.3",
         "@babel/eslint-plugin": "^7.19.1",
+        "@babel/plugin-proposal-decorators": "^7.21.0",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
