--- a/package.json
+++ b/package.json
@@ -55,15 +55,18 @@
         "react": "18.2.0",
         "react-intl": "^6.3.2",
         "react-native": "0.71.4",
+        "react-native-fast-image": "^8.6.3",
         "react-native-gesture-handler": "^2.9.0",
         "react-native-haptic-feedback": "^2.0.3",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-localize": "^2.2.6",
         "react-native-navigation": "^7.32.1",
         "react-native-permissions": "^3.8.0",
-        "react-native-reanimated": "^2.14.4",
+        "react-native-reanimated": "2.14.4",
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
         "react-native-splash-screen": "^3.3.0",
+        "react-native-switch": "^1.5.1",
         "react-native-vector-icons": "^9.2.0",
         "react-redux": "^7.2.1",
         "react-syntax-highlighter": "^15.5.0",
@@ -126,5 +129,15 @@
         "react-test-renderer": "18.2.0",
         "ts-jest": "^29.0.5",
         "typescript": "4.8.4"
+    },
+    "overrides": {
+        "react-native": {
+            "react": "^18.2.0"
+        },
+        "@testing-library/react-hooks": {
+            "@types/react": "^18.0.24",
+            "react": "^18.2.0",
+            "react-test-renderer": "^18.2.0"
+        }
     }
 }
