--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
         "react-native-reanimated": "2.14.4",
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
+        "react-native-shadow-2": "^7.0.7",
         "react-native-splash-screen": "^3.3.0",
+        "react-native-svg": "^13.9.0",
         "react-native-switch": "^1.5.1",
         "react-native-vector-icons": "^9.2.0",
         "react-redux": "^7.2.1",
