--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
         "react-native-splash-screen": "^3.3.0",
         "react-native-svg": "^13.9.0",
         "react-native-switch": "^1.5.1",
-        "react-native-vector-icons": "^9.2.0",
         "react-redux": "^7.2.1",
         "react-syntax-highlighter": "^15.5.0",
         "realm": "^11.7.0",
@@ -96,7 +95,6 @@
         "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.24",
         "@types/react-native": "^0.71.4",
-        "@types/react-native-vector-icons": "^6.4.13",
         "@types/react-redux": "^7.1.25",
         "@types/react-syntax-highlighter": "^15.5.6",
         "@types/react-test-renderer": "^18.0.0",
@@ -128,6 +126,7 @@
         "prettier": "^2.4.1",
         "react-native-bundle-visualizer": "^3.1.3",
         "react-native-dotenv": "^3.4.8",
+        "react-native-svg-transformer": "^1.0.0",
         "react-test-renderer": "18.2.0",
         "ts-jest": "^29.0.5",
         "typescript": "4.8.4"
@@ -141,5 +140,10 @@
             "react": "^18.2.0",
             "react-test-renderer": "^18.2.0"
         }
+    },
+    "rnpm": {
+        "assets": [
+            "resources/fonts"
+        ]
     }
 }
