--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "patch-package": "^6.5.1",
         "postinstall-postinstall": "^2.1.0",
         "react": "18.2.0",
+        "react-freeze": "^1.0.3",
         "react-intl": "^6.3.2",
         "react-native": "0.71.4",
         "react-native-fast-image": "^8.6.3",
