--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@react-navigation/bottom-tabs": "^6.5.7",
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
+        "@shopify/flash-list": "^1.4.3",
         "@types/shallow-equals": "^1.0.0",
         "axios": "^1.3.5",
         "deepmerge": "^4.3.1",
@@ -62,6 +63,7 @@
         "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-localize": "^2.2.6",
         "react-native-navigation": "^7.32.1",
+        "react-native-parsed-text": "^0.0.22",
         "react-native-permissions": "^3.8.0",
         "react-native-reanimated": "2.14.4",
         "react-native-safe-area-context": "^4.5.0",
