--- a/package.json
+++ b/package.json
@@ -151,5 +151,22 @@
     "assets": [
       "resources/fonts"
     ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --quiet",
+      "prettier --write",
+      "git add"
+    ],
+    "*.{json,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc && lint-staged",
+      "pre-push": "npm run lint"
+    }
   }
 }
