--- a/package.json
+++ b/package.json
@@ -1,167 +1,170 @@
 {
-  "name": "love_story_typescript",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "adb": "adb reverse tcp:8081 tcp:8081",
-    "clean": "./scripts/clean_source.sh",
-    "all": "watchman watch-del-all && rm -rf yarn.lock && rm -rf node_modules/ && rm -fr $TMPDIR/metro* && yarn install",
-    "android": "react-native run-android",
-    "eslint": "eslint --quiet --ext js,jsx,ts,tsx app --fix",
-    "fix": "prettier --write \"{app,src,modules}/**/*.{ts,tsx}\"",
-    "git-clean": "git config --local filter.turnOfDebugging.clean 'sed \"s/= true/= false/\"'",
-    "git-hide": "git update-index --skip-worktree packages/core/services/sender/getUrlForPath.ts",
-    "git-pull-rebase": "git config --local pull.rebase true",
-    "git-smudge": "git config --local filter.turnOfDebugging.smudge 'sed \"s/= true/= false/\"'",
-    "git-unhide": "git update-index --no-skip-worktree packages/core/services/sender/getUrlForPath.ts",
-    "postinstall": "patch-package",
-    "ios": "react-native run-ios",
-    "ios-14": "react-native run-ios --simulator=\"iPhone 14 \"",
-    "ios-gems": "cd ios && bundle install",
-    "kill": "kill $(lsof -ti:8081)",
-    "lint": "tsc && eslint --quiet --ext js,jsx,ts,tsx app && jest",
-    "sort": "npx sort-package-json",
-    "start": "react-native start",
-    "test": "jest",
-    "test-no-cache": "jest --no-cache",
-    "visualize": "./node_modules/.bin/react-native-bundle-visualizer",
-    "prepare": "husky install"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "dependencies": {
-    "@flyerhq/react-native-link-preview": "^1.6.0",
-    "@formatjs/intl-datetimeformat": "6.3.1",
-    "@formatjs/intl-getcanonicallocales": "2.0.4",
-    "@formatjs/intl-locale": "3.0.7",
-    "@formatjs/intl-numberformat": "8.2.0",
-    "@formatjs/intl-pluralrules": "5.1.4",
-    "@formatjs/intl-relativetimeformat": "11.1.4",
-    "@gorhom/bottom-sheet": "^4.4.5",
-    "@notifee/react-native": "^7.7.1",
-    "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-firebase/app": "^17.4.2",
-    "@react-native-firebase/messaging": "^17.4.2",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@shopify/flash-list": "^1.4.3",
-    "@types/shallow-equals": "^1.0.0",
-    "axios": "^1.3.5",
-    "deepmerge": "^4.3.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.43",
-    "nanoid": "^3.1.12",
-    "patch-package": "^6.5.1",
-    "postinstall-postinstall": "^2.1.0",
-    "react": "18.2.0",
-    "react-freeze": "^1.0.3",
-    "react-intl": "^6.3.2",
-    "react-native": "0.71.4",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-haptic-feedback": "^2.0.3",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-localize": "^2.2.6",
-    "react-native-navigation": "^7.32.1",
-    "react-native-parsed-text": "^0.0.22",
-    "react-native-permissions": "^3.8.0",
-    "react-native-reanimated": "2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-shadow-2": "^7.0.7",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.9.0",
-    "react-native-switch": "^1.5.1",
-    "react-redux": "^7.2.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "realm": "^11.7.0",
-    "redux": "^4.0.5",
-    "redux-observable": "^1.2.0",
-    "reselect": "^4.0.0",
-    "rxjs": "^6.6.3",
-    "serialize-error": "^11.0.0",
-    "stringify-object": "^5.0.0",
-    "typesafe-actions": "^5.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/eslint-parser": "^7.21.3",
-    "@babel/eslint-plugin": "^7.19.1",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/lodash": "^4.14.191",
-    "@types/react": "^18.0.24",
-    "@types/react-native": "^0.71.4",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-syntax-highlighter": "^15.5.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^29.2.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.19.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-module-resolver": "^1.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-rxjs": "^5.0.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.2.1",
-    "jest-environment-node-single-context": "^29.0.0",
-    "lint-staged": "^13.2.0",
-    "metro-react-native-babel-preset": "^0.76.0",
-    "prettier": "^2.4.1",
-    "react-native-bundle-visualizer": "^3.1.3",
-    "react-native-dotenv": "^3.4.8",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "4.8.4"
-  },
-  "overrides": {
-    "react-native": {
-      "react": "^18.2.0"
+    "name": "love_story_typescript",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "adb": "adb reverse tcp:8081 tcp:8081",
+        "clean": "./scripts/clean_source.sh",
+        "all": "watchman watch-del-all && rm -rf yarn.lock && rm -rf node_modules/ && rm -fr $TMPDIR/metro* && yarn install",
+        "android": "react-native run-android",
+        "eslint": "eslint --quiet --ext js,jsx,ts,tsx app --fix",
+        "fix": "prettier --write \"{app,src,modules}/**/*.{ts,tsx}\"",
+        "git-clean": "git config --local filter.turnOfDebugging.clean 'sed \"s/= true/= false/\"'",
+        "git-hide": "git update-index --skip-worktree packages/core/services/sender/getUrlForPath.ts",
+        "git-pull-rebase": "git config --local pull.rebase true",
+        "git-smudge": "git config --local filter.turnOfDebugging.smudge 'sed \"s/= true/= false/\"'",
+        "git-unhide": "git update-index --no-skip-worktree packages/core/services/sender/getUrlForPath.ts",
+        "postinstall": "patch-package",
+        "ios": "react-native run-ios",
+        "ios-14": "react-native run-ios --simulator=\"iPhone 14 \"",
+        "ios-gems": "cd ios && bundle install",
+        "kill": "kill $(lsof -ti:8081)",
+        "lint": "tsc && eslint --quiet --ext js,jsx,ts,tsx app && jest",
+        "sort": "npx sort-package-json",
+        "start": "react-native start",
+        "test": "jest",
+        "test-no-cache": "jest --no-cache",
+        "visualize": "./node_modules/.bin/react-native-bundle-visualizer",
+        "prepare": "husky install"
     },
-    "@testing-library/react-hooks": {
-      "@types/react": "^18.0.24",
-      "react": "^18.2.0",
-      "react-test-renderer": "^18.2.0"
+    "jest": {
+        "preset": "react-native"
+    },
+    "dependencies": {
+        "@flyerhq/react-native-link-preview": "^1.6.0",
+        "@formatjs/intl-datetimeformat": "6.3.1",
+        "@formatjs/intl-getcanonicallocales": "2.0.4",
+        "@formatjs/intl-locale": "3.0.7",
+        "@formatjs/intl-numberformat": "8.2.0",
+        "@formatjs/intl-pluralrules": "5.1.4",
+        "@formatjs/intl-relativetimeformat": "11.1.4",
+        "@gorhom/bottom-sheet": "^4.4.5",
+        "@notifee/react-native": "^7.7.1",
+        "@react-native-community/netinfo": "^9.3.7",
+        "@react-native-firebase/app": "^17.4.2",
+        "@react-native-firebase/messaging": "^17.4.2",
+        "@react-navigation/bottom-tabs": "^6.5.7",
+        "@react-navigation/native": "^6.1.6",
+        "@react-navigation/native-stack": "^6.9.12",
+        "@shopify/flash-list": "^1.4.3",
+        "@types/shallow-equals": "^1.0.0",
+        "axios": "^1.3.5",
+        "deepmerge": "^4.3.1",
+        "lodash": "^4.17.21",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.43",
+        "nanoid": "^3.1.12",
+        "patch-package": "^6.5.1",
+        "postinstall-postinstall": "^2.1.0",
+        "react": "18.2.0",
+        "react-freeze": "^1.0.3",
+        "react-intl": "^6.3.2",
+        "react-native": "0.71.4",
+        "react-native-fast-image": "^8.6.3",
+        "react-native-gesture-handler": "^2.9.0",
+        "react-native-haptic-feedback": "^2.0.3",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-localize": "^2.2.6",
+        "react-native-navigation": "^7.32.1",
+        "react-native-parsed-text": "^0.0.22",
+        "react-native-permissions": "^3.8.0",
+        "react-native-reanimated": "2.14.4",
+        "react-native-safe-area-context": "^4.5.0",
+        "react-native-screens": "^3.20.0",
+        "react-native-shadow-2": "^7.0.7",
+        "react-native-splash-screen": "^3.3.0",
+        "react-native-svg": "^13.9.0",
+        "react-native-switch": "^1.5.1",
+        "react-redux": "^7.2.1",
+        "react-syntax-highlighter": "^15.5.0",
+        "realm": "^11.7.0",
+        "redux": "^4.0.5",
+        "redux-observable": "^1.2.0",
+        "reselect": "^4.0.0",
+        "rxjs": "^6.6.3",
+        "serialize-error": "^11.0.0",
+        "stringify-object": "^5.0.0",
+        "typesafe-actions": "^5.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@babel/eslint-parser": "^7.21.3",
+        "@babel/eslint-plugin": "^7.19.1",
+        "@babel/plugin-proposal-decorators": "^7.21.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/preset-env": "^7.20.0",
+        "@babel/runtime": "^7.20.0",
+        "@react-native-community/eslint-config": "^3.2.0",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@tsconfig/react-native": "^2.0.2",
+        "@types/jest": "^29.2.1",
+        "@types/lodash": "^4.14.191",
+        "@types/react": "^18.0.24",
+        "@types/react-native": "^0.71.4",
+        "@types/react-redux": "^7.1.25",
+        "@types/react-syntax-highlighter": "^15.5.6",
+        "@types/react-test-renderer": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.37.0",
+        "babel-jest": "^29.2.1",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-config-standard-with-typescript": "^34.0.1",
+        "eslint-import-resolver-babel-module": "^5.3.2",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-jest": "^27.2.1",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-module-resolver": "^1.5.0",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-rxjs": "^5.0.2",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "husky": "^8.0.3",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.2.1",
+        "jest-environment-node-single-context": "^29.0.0",
+        "lint-staged": "^13.2.0",
+        "metro-react-native-babel-preset": "^0.76.0",
+        "prettier": "^2.4.1",
+        "react-native-bundle-visualizer": "^3.1.3",
+        "react-native-dotenv": "^3.4.8",
+        "react-native-svg-transformer": "^1.0.0",
+        "react-test-renderer": "18.2.0",
+        "ts-jest": "^29.0.5",
+        "typescript": "*"
+    },
+    "overrides": {
+        "react-native": {
+            "react": "^18.2.0"
+        },
+        "@testing-library/react-hooks": {
+            "@types/react": "^18.0.24",
+            "react": "^18.2.0",
+            "react-test-renderer": "^18.2.0"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --quiet",
+            "prettier --write",
+            "git add"
+        ],
+        "*.{json,md}": [
+            "prettier --write",
+            "git add"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "tsc && lint-staged",
+            "pre-push": "npm run lint"
+        }
     }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --quiet",
-      "prettier --write",
-      "git add"
-    ],
-    "*.{json,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsc && lint-staged",
-      "pre-push": "npm run lint"
-    }
-  }
 }
