--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "es6",
       "ES2019"
     ],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
