--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-rxjs": "^5.0.2",
         "eslint-plugin-unused-imports": "^2.0.0",
-        "husky": "^8.0.3",
+        "husky": "4",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.2.1",
         "jest-environment-node-single-context": "^29.0.0",
