--- a/package.json
+++ b/package.json
@@ -24,11 +24,7 @@
         "start": "react-native start",
         "test": "jest",
         "test-no-cache": "jest --no-cache",
-        "visualize": "./node_modules/.bin/react-native-bundle-visualizer",
-        "prepare": "husky install"
-    },
-    "jest": {
-        "preset": "react-native"
+        "visualize": "./node_modules/.bin/react-native-bundle-visualizer"
     },
     "dependencies": {
         "@flyerhq/react-native-link-preview": "^1.6.0",
@@ -104,6 +100,7 @@
         "@types/react-redux": "^7.1.25",
         "@types/react-syntax-highlighter": "^15.5.6",
         "@types/react-test-renderer": "^18.0.0",
+        "@types/stringify-object": "^4.0.2",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.37.0",
         "babel-jest": "^29.2.1",
@@ -130,6 +127,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.2.1",
         "jest-environment-node-single-context": "^29.0.0",
+        "jest-mock-console": "^2.0.0",
         "lint-staged": "^13.2.0",
         "metro-react-native-babel-preset": "^0.76.0",
         "prettier": "^2.4.1",
