--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@formatjs/intl-relativetimeformat": "11.1.4",
         "@gorhom/bottom-sheet": "^4.4.5",
         "@notifee/react-native": "^7.7.1",
+        "@react-native-community/masked-view": "^0.1.11",
         "@react-native-community/netinfo": "^9.3.7",
         "@react-native-firebase/app": "^17.4.2",
         "@react-native-firebase/messaging": "^17.4.2",
@@ -65,6 +66,7 @@
         "react-native-parsed-text": "^0.0.22",
         "react-native-permissions": "^3.8.0",
         "react-native-reanimated": "2.14.4",
+        "react-native-redash": "^18.1.0",
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
         "react-native-shadow-2": "^7.0.7",
