:hearts: add connection banner

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@gorhom/bottom-sheet": "^4.4.5",
         "@notifee/react-native": "^7.7.1",
         "@react-native-community/masked-view": "^0.1.11",
-        "@react-native-community/netinfo": "^9.3.7",
+        "@react-native-community/netinfo": "^9.3.10",
         "@react-native-firebase/app": "^17.4.2",
         "@react-native-firebase/messaging": "^17.4.2",
         "@react-navigation/bottom-tabs": "^6.5.7",
@@ -64,6 +64,7 @@
         "react-native-keyboard-aware-scroll-view": "^0.9.5",
         "react-native-localize": "^2.2.6",
         "react-native-navigation": "^7.32.1",
+        "react-native-pager-view": "^6.2.0",
         "react-native-parsed-text": "^0.0.22",
         "react-native-permissions": "^3.8.0",
         "react-native-reanimated": "2.14.4",
@@ -74,6 +75,7 @@
         "react-native-splash-screen": "^3.3.0",
         "react-native-svg": "^13.9.0",
         "react-native-switch": "^1.5.1",
+        "react-native-tab-view": "^3.5.1",
         "react-redux": "^7.2.1",
         "react-syntax-highlighter": "^15.5.0",
         "realm": "^11.7.0",
