--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@react-navigation/bottom-tabs": "^6.5.7",
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
+        "@sentry/react-native": "^5.5.0",
         "@shopify/flash-list": "^1.4.3",
         "@types/shallow-equals": "^1.0.0",
         "axios": "^1.3.5",
@@ -58,6 +59,7 @@
         "react-intl": "^6.3.2",
         "react-native": "0.71.4",
         "react-native-animated-pagination-dot": "^0.4.0",
+        "react-native-exception-handler": "^2.10.10",
         "react-native-fast-image": "^8.6.3",
         "react-native-gesture-handler": "^2.9.0",
         "react-native-haptic-feedback": "^2.0.3",
@@ -69,6 +71,7 @@
         "react-native-permissions": "^3.8.0",
         "react-native-reanimated": "2.14.4",
         "react-native-redash": "^18.1.0",
+        "react-native-restart": "^0.0.27",
         "react-native-safe-area-context": "^4.5.0",
         "react-native-screens": "^3.20.0",
         "react-native-shadow-2": "^7.0.7",
@@ -97,6 +100,7 @@
         "@babel/runtime": "^7.20.0",
         "@react-native-community/eslint-config": "^3.2.0",
         "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/react-native": "^12.1.2",
         "@tsconfig/react-native": "^2.0.2",
         "@types/jest": "^29.2.1",
         "@types/lodash": "^4.14.191",
@@ -139,7 +143,7 @@
         "react-native-bundle-visualizer": "^3.1.3",
         "react-native-dotenv": "^3.4.8",
         "react-native-svg-transformer": "^1.0.0",
-        "react-test-renderer": "18.2.0",
+        "react-test-renderer": "^18.2.0",
         "ts-jest": "^29.0.5",
         "typescript": "*"
     },
