--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "git-smudge": "git config --local filter.turnOfDebugging.smudge 'sed \"s/= true/= false/\"'",
         "git-unhide": "git update-index --no-skip-worktree packages/core/services/sender/getUrlForPath.ts",
         "postinstall": "patch-package",
+        "pod-install": "cd ios && pod install",
         "ios": "react-native run-ios",
         "ios-14": "react-native run-ios --simulator=\"iPhone 14 \"",
         "ios-gems": "cd ios && bundle install",
+        "ios-gems-m1": "cd ios && arch -arm64 bundle install",
         "kill": "kill $(lsof -ti:8081)",
         "lint": "tsc && eslint --quiet --ext js,jsx,ts,tsx app && jest",
         "sort": "npx sort-package-json",
@@ -96,6 +98,7 @@
         "@babel/eslint-plugin": "^7.19.1",
         "@babel/plugin-proposal-decorators": "^7.21.0",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
         "@react-native-community/eslint-config": "^3.2.0",
