--- a/.github/actions/prepare-node-deps/action.yaml
+++ b/.github/actions/prepare-node-deps/action.yaml
@@ -7,8 +7,9 @@ runs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '20'
-        cache: 'yarn'
-        
+        node-version: "20"
+        cache: "yarn"
+
     - name: Install project dependencies
+      shell: bash
       run: yarn
