--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "husky": {
         "hooks": {
             "pre-commit": "tsc && lint-staged",
-            "pre-push": "npm run lint"
+            "pre-push": "yarn lint"
         }
     }
 }
