--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -92,6 +92,8 @@ jobs:
 
             - name: release/create-github-release
               env:
+                  TAG: '${{ github.ref_name }}'
+                  GITHUB_REF_NAME: '${{ github.ref_name }}'
                   GITHUB_TOKEN: '${{ secrets.MOBILE_GITHUB_TOKEN }}'
               run: bundle exec fastlane github
               working-directory: ./fastlane
